# openflashcards

./: .env.example  .gitignore  CHANGELOG.md  docker-compose.ghcr.yaml  docker-compose.yaml
.github/workflows/: pages.yml  release.yml
apps/api/: Dockerfile  Makefile
apps/api/cmd/api/: main.go
apps/api/docker/postgres/: test-extensions.sh
apps/api/internal/auth/: repository.go  service.go  service_test.go  service_tokens.go
apps/api/internal/cards/: handler.go  handler_browse.go  handler_bulk.go  handler_content.go  handler_test.go  handler_write.go  service.go  service_browse.go  service_bulk.go  service_review.go  types.go
apps/api/internal/decks/: handler.go  handler_test.go  service.go
apps/api/internal/kanban/: handler.go  handler_test.go  service.go
apps/api/internal/letters/: service.go  service_test.go
apps/api/internal/modules/: service.go
apps/api/internal/notes/: handler.go  handler_test.go  service.go
apps/api/internal/prompttemplates/: service.go
apps/api/internal/users/: service.go  (+3 more)
apps/api/migrations/: 20260709000002_add_reviews_was_new.sql  atlas.sum
apps/api/queries/: cards.sql  decks.sql  kanban_cards.sql  notes.sql  refresh_tokens.sql  users.sql
apps/fsrs-optimizer/: Cargo.toml
apps/fsrs-optimizer/src/: main.rs
apps/landingpage/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
apps/landingpage/public/: robots.txt
apps/landingpage/src/: global.css
apps/web/: .env.example  Dockerfile  docker-entrypoint.sh  index.html  runtime-config.template.js
apps/web/src/: main.tsx
docs/: DESIGN.md
(+61 files in other folders)
