[package]
name = "openflashcards-fsrs-optimize"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openflashcards-fsrs-optimize"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
fsrs = "6.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
